Fix ServiceWorker bg paint metric.

BUG=608727

Review-Url: https://codereview.chromium.org/1943353002
Cr-Commit-Position: refs/heads/master@{#391241}

Former-commit-id: e8cdad1a9d87eac29fbdbf7e376a89c4cd9189ba